--- a/pages/19738.html
+++ b/pages/19738.html
@@ -309,13 +309,229 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Idea</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="mathematics">Mathematics</h4>
+
+<div class="hide"><ul>
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/math+resources">math resources</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/history+of+mathematics">history of mathematics</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/foundations">Structural Foundations</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/logic">logic</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/internal+language">internal language</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/classical+mathematics">classical mathematics</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/evil">evil</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/predicative+mathematics">predicative mathematics</a></li>
+
+<li><a href="http://ncatlab.org/nlab/list/foundational+axiom">category:foundational axiom</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/set+theory">set theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/structural+set+theory">structural set theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Categories+and+Sheaves">Categories and Sheaves</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topos+theory">topos theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Sheaves+in+Geometry+and+Logic">Sheaves in Geometry and Logic</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Higher+Topos+Theory">(∞,1)-topos theory</a>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/models+for+%E2%88%9E-stack+%28%E2%88%9E%2C1%29-toposes">models for ∞-stack (∞,1)-toposes</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational homotopy theory</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topology+and+geometry">Topology and Geometry</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/geometry">geometry</a> (general list), <a class="existingWikiWord" href="/nlab/show/topology">topology</a> (general list)</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/general+topology">general topology</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/synthetic+differential+geometry">synthetic differential geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/symplectic+geometry">symplectic geometry</a></li>
+</ul>
+</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/algebraic+geometry">algebraic geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/noncommutative+algebraic+geometry">noncommutative algebraic geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/noncommutative+geometry">noncommutative geometry</a> (general flavour)</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebra">Algebra</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a>, <a class="existingWikiWord" href="/nlab/show/ring+theory">ring theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebraic+approaches+to+differential+calculus">algebraic approaches to differential calculus</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/counterexamples+in+algebra">counterexamples in algebra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/analysis">analysis</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/nonstandard+analysis">nonstandard analysis</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/operator+algebras">operator algebras</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fourier+transform">Fourier transform</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lie+theory">Lie theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/infinity-Lie+theory+-+contents">higher Lie theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/discrete+mathematics">discrete mathematics</a></p>
+</li>
+</ul><div>
+<p>
+  <a href="/nlab/edit/mathematicscontents">Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#examples'>Examples</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>In <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a> it happens at times that one and the same concept is given two different names to indicate a specific perspective, a certain attitude as to what to do with such objects.</p>
 
-<p>Here are examples:</p>
+<h2 id="examples">Examples</h2>
 
 <ul>
 <li>
@@ -334,7 +550,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October  1, 2018 at 07:51:26.
+  Created on October  1, 2018 at 08:09:29.
   See the <a href="https://ncatlab.org/nlab/history/concept with an attitude" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
