--- a/pages/9663.html
+++ b/pages/9663.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -472,9 +472,9 @@ margin-left: 0em;
 
 <h2 id="statement">Statement</h2>
 
-<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><a class="existingWikiWord" href="/nlab/show/Dynkin+quivers">Dynkin quivers</a></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><a class="existingWikiWord" href="/nlab/show/Dynkin+quivers">Dynkin quivers</a></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a>.</p>
 
-<p>Moreover, the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> in this case are <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the positive <a class="existingWikiWord" href="/nlab/show/root+%28in+representation+theory%29">roots</a> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>.</p>
+<p>Moreover, the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> in this case are in <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the <a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/root+%28in+representation+theory%29">roots</a> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -513,14 +513,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 06:56:55.
+  Last revised on October  1, 2018 at 08:18:25.
   See the <a href="https://ncatlab.org/nlab/history/Gabriel&#39;s theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gabriel%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel%27s+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gabriel%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gabriel%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel%27s+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Gabriel%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gabriel&#39;s theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
