--- a/pages/2134.html
+++ b/pages/2134.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9038/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9038/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -428,7 +428,12 @@ margin-left: 0em;
 <li><a href='#statement'>Statement</a></li>
 <li><a href='#proof'>Proof</a></li>
 <li><a href='#InterpretationInCategoricalAlgebra'>Interpretation in categorical algebra</a></li>
-<li><a href='#generalizations'>Generalizations</a></li>
+<li><a href='#GeneralizationsAndVariants'>Generalizations and variants</a></li>
+<ul>
+<li><a href='#for_simple_modules'>For simple modules</a></li>
+<li><a href='#for_simple_objects_in_an_abelian_category'>For simple objects in an abelian category</a></li>
+<li><a href='#for_bridgeland_stable_objects'>For Bridgeland stable objects</a></li>
+</ul>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -657,11 +662,21 @@ margin-left: 0em;
 
 <p>with respect to the canonical <a class="existingWikiWord" href="/nlab/show/decategorification">decategorified</a> <a class="existingWikiWord" href="/nlab/show/inner+product">inner product</a> from <a class="maruku-eqref" href="#eq:DecategorifiedInnterProduct">(1)</a>.</p>
 
-<h2 id="generalizations">Generalizations</h2>
+<h2 id="GeneralizationsAndVariants">Generalizations and variants</h2>
 
-<p>Part (1) is essentially <a class="existingWikiWord" href="/nlab/show/category+theory">category-theoretic</a> and can be generalized in many ways, for example, by replacing the <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> by some <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/associative+algebra">algebra</a> and taking the representations compatible with the action of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>; more generally, given an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a>, the <a class="existingWikiWord" href="/nlab/show/endomorphism+ring">endomorphism ring</a> of a <a class="existingWikiWord" href="/nlab/show/simple+object">simple object</a> is a division ring.</p>
+<h3 id="for_simple_modules">For simple modules</h3>
 
-<p>For (2), if the endomorphism rings of all objects in an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> are <a class="existingWikiWord" href="/nlab/show/finite-dimensional+vector+space">finite-dimensional</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> (as is the case for group representations), then the endomorphism ring of a simple object is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> itself.</p>
+<p>Part (1) is essentially <a class="existingWikiWord" href="/nlab/show/category+theory">category-theoretic</a> and can be generalized in many ways, for example, by replacing the <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> by some <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/associative+algebra">algebra</a> and taking the representations compatible with the action of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>.</p>
+
+<h3 id="for_simple_objects_in_an_abelian_category">For simple objects in an abelian category</h3>
+
+<p>More generally, given an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a>, part (1) of Schur’s lemma applies to the <a class="existingWikiWord" href="/nlab/show/simple+objects">simple objects</a> (see <a href="simple+object#SchurLemma">there</a>) and the <a class="existingWikiWord" href="/nlab/show/endomorphism+ring">endomorphism ring</a> of a <a class="existingWikiWord" href="/nlab/show/simple+object">simple object</a> is a <a class="existingWikiWord" href="/nlab/show/division+ring">division ring</a>.</p>
+
+<p>For (2), if the <a class="existingWikiWord" href="/nlab/show/endomorphism+rings">endomorphism rings</a> of all objects in an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> are <a class="existingWikiWord" href="/nlab/show/finite-dimensional+vector+space">finite-dimensional</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> (as is the case for group representations), then the endomorphism ring of a simple object is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> itself.</p>
+
+<h3 id="for_bridgeland_stable_objects">For Bridgeland stable objects</h3>
+
+<p>The statement of Schur’s lemma applies also to objects which are stable with respect to a <a class="existingWikiWord" href="/nlab/show/Bridgeland+stability+condition">Bridgeland stability condition</a>, see <a href="Bridgeland+stability+condition#SchurLemma">there</a></p>
 
 <h2 id="references">References</h2>
 
@@ -682,14 +697,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 04:40:06.
+  Last revised on October  1, 2018 at 09:52:49.
   See the <a href="https://ncatlab.org/nlab/history/Schur&#39;s lemma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schur%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur%27s+lemma/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Schur%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Schur%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur%27s+lemma/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Schur%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Schur&#39;s lemma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
