--- a/pages/6489.html
+++ b/pages/6489.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -671,8 +671,8 @@ margin-left: 0em;
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#in_terms_of_hearts_of_tstructures'>In terms of hearts of t-structures</a></li>
+<li><a href='#LemmaSchur'>Schur’s lemma</a></li>
 <li><a href='#SpaceOfStabilityConditions'>Space of stability conditions</a></li>
-<li><a href='#WallCrossing'>Wall crossing</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
 <ul>
@@ -866,10 +866,26 @@ margin-left: 0em;
 
 <p>Bridgeland proves that an equivalent way to give a stability is to specify a heart of a bounded <a class="existingWikiWord" href="/nlab/show/t-structure">t-structure</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding="application/x-tex">\mathcal{D}</annotation></semantics></math> and give a stability function the heart that satisfies the Harder-Narasimhan property.</p>
 
+<h3 id="LemmaSchur">Schur’s lemma</h3>
+
+<div class="num_prop" id="SchurLemma">
+<h6 id="proposition">Proposition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a>)</strong></p>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> be an <a class="existingWikiWord" href="/nlab/show/abelian+category">abelian category</a> equipped with a stability condition (Def. <a class="maruku-ref" href="#StabilityCondition"></a>).</p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mo>∈</mo><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">E \in \mathcal{A}</annotation></semantics></math> a stable object (Def <a class="maruku-ref" href="#StableObjects"></a>), every <a class="existingWikiWord" href="/nlab/show/endomorphism">endomorphism</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is either the <a class="existingWikiWord" href="/nlab/show/zero+morphism">zero morphism</a> or is an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>; in particular if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">\mathcal{A}</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/enriched+category">enriched</a> in <a class="existingWikiWord" href="/nlab/show/vector+spaces">vector spaces</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math>, then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>End</mi><mo stretchy="false">(</mo><mi>E</mi><mo stretchy="false">)</mo><mo>≃</mo><mi>𝕜</mi></mrow><annotation encoding="application/x-tex">End(E) \simeq \mathbb{k}</annotation></semantics></math>.</p>
+
+<p>More generally, for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>E</mi> <mn>2</mn></msub><mo>∈</mo><mi>𝒜</mi></mrow><annotation encoding="application/x-tex">E_1, E_2 \in \mathcal{A}</annotation></semantics></math> two stable objects of the sqma slope/phase, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ϕ</mi><mo stretchy="false">(</mo><msub><mi>E</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>=</mo><mi>ϕ</mi><mo stretchy="false">(</mo><msub><mi>E</mi> <mn>2</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\phi(E_1) =\phi(E_2)</annotation></semantics></math>, any <a class="existingWikiWord" href="/nlab/show/morphism">morphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>1</mn></msub><mo>→</mo><msub><mi>E</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">E_1 \to E_2</annotation></semantics></math> is either the <a class="existingWikiWord" href="/nlab/show/zero+morphism">zero morphism</a> or is an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a>.</p>
+</div>
+
+<p>e.g. (<a href="#Bayer11">Bayer 11, 2.3 Exercise 1</a>, <a href="#Martinez13">Martinez 13, prop. 3</a>) spring</p>
+
 <h3 id="SpaceOfStabilityConditions">Space of stability conditions</h3>
 
 <div class="num_prop" id="SpaceOfStabilityConditions">
-<h6 id="proposition">Proposition</h6>
+<h6 id="proposition_2">Proposition</h6>
 
 <p><strong>(space of stability conditions)</strong></p>
 
@@ -880,9 +896,7 @@ margin-left: 0em;
 
 <p>Most work using this fact has been done in the case of the <a class="existingWikiWord" href="/nlab/show/bounded+derived+category+of+coherent+sheaves">bounded derived category of coherent sheaves</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒟</mi><mo>=</mo><msup><mi>D</mi> <mi>b</mi></msup><mo stretchy="false">(</mo><mi>Coh</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{D}=D^b(Coh(X))</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a smooth, projective <a class="existingWikiWord" href="/nlab/show/algebraic+variety">variety</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}</annotation></semantics></math> so that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒟</mi></mrow><annotation encoding="application/x-tex">\mathcal{D}</annotation></semantics></math> is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}</annotation></semantics></math>-linear and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>𝒟</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\mathcal{D})</annotation></semantics></math> is finitely generated.</p>
 
-<h3 id="WallCrossing">Wall crossing</h3>
-
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Stab</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Stab(X)</annotation></semantics></math> has a locally finite wall and chamber decomposition. The philosophy is that if one fixes a numerical condition <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math> and considers the <a class="existingWikiWord" href="/nlab/show/moduli+space">moduli space</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math>-stable sheaves as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math> varies through <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Stab</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Stab(X)</annotation></semantics></math>, then the moduli spaces <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mi>σ</mi></msub><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>M</mi> <mrow><mi>σ</mi><mo>′</mo></mrow></msub><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">M_\sigma(v)\simeq M_{\sigma '}(v)</annotation></semantics></math> should be isomorphic if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi><mo>′</mo></mrow><annotation encoding="application/x-tex">\sigma'</annotation></semantics></math> are in the same chamber. Bayer and Macri have shown this is true for K3 surfaces, and upon <a class="existingWikiWord" href="/nlab/show/wall+crossing">crossing a wall</a> the moduli spaces are related by a <a class="existingWikiWord" href="/nlab/show/birational+map">birational map</a>.</p>
+<p>The space of stability conditions <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Stab</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Stab(X)</annotation></semantics></math> has a locally finite wall and chamber decomposition. The philosophy is that if one fixes a numerical condition <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>v</mi></mrow><annotation encoding="application/x-tex">v</annotation></semantics></math> and considers the <a class="existingWikiWord" href="/nlab/show/moduli+space">moduli space</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math>-stable sheaves as <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math> varies through <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Stab</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Stab(X)</annotation></semantics></math>, then the moduli spaces <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>M</mi> <mi>σ</mi></msub><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>M</mi> <mrow><mi>σ</mi><mo>′</mo></mrow></msub><mo stretchy="false">(</mo><mi>v</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">M_\sigma(v)\simeq M_{\sigma '}(v)</annotation></semantics></math> should be isomorphic if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi></mrow><annotation encoding="application/x-tex">\sigma</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>σ</mi><mo>′</mo></mrow><annotation encoding="application/x-tex">\sigma'</annotation></semantics></math> are in the same chamber. Bayer and Macri have shown this is true for K3 surfaces, and upon <a class="existingWikiWord" href="/nlab/show/wall+crossing">crossing a wall</a> the moduli spaces are related by a <a class="existingWikiWord" href="/nlab/show/birational+map">birational map</a>.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -983,6 +997,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, Ivan Smith, <em>Quadratic differentials as stability conditions</em>, <a href="http://arxiv.org/abs/1302.7030">arxiv/1302.7030</a></p>
 </li>
+
+<li id="Martinez13">
+<p>Cristian Martinez, <em>Duality, Bridgeland wall-crossing and flips of secant varieties</em> (<a href="https://arxiv.org/abs/1311.1183">arXiv:1311.1183</a>)</p>
+</li>
 </ul>
 
 <h3 id="introduction_and_review">Introduction and review</h3>
@@ -996,7 +1014,7 @@ margin-left: 0em;
 <p>Markus Reineke, <em>Moduli of representations of quivers</em> (<a href="https://arxiv.org/abs/0802.2147">arXiv:0802.2147</a>)</p>
 </li>
 
-<li>
+<li id="Bayer11">
 <p>Arend Bayer, <em>A tour to stability conditions on derived categories</em>, 2011 (<a href="https://www.maths.ed.ac.uk/~abayer/dc-lecture-notes.pdf">pdf</a>)</p>
 </li>
 
@@ -1092,14 +1110,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 08:27:12.
+  Last revised on October  1, 2018 at 09:50:50.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
