--- a/pages/19725.html
+++ b/pages/19725.html
@@ -577,7 +577,7 @@ margin-left: 0em;
   R_{\widehat{k}}(G)
 
 </annotation></semantics></math></div>
-<p>for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/coprime+integer">coprime</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow></mrow><annotation encoding="application/x-tex">{\vert G\vert}</annotation></semantics></math>. (See also at <em><a class="existingWikiWord" href="/nlab/show/Adams+conjecture">Adams conjecture</a></em>.)</p>
+<p>for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/coprime+integer">coprime</a> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow></mrow><annotation encoding="application/x-tex">{\vert G\vert}</annotation></semantics></math>. (See also at <em><a class="existingWikiWord" href="/nlab/show/Adams+conjecture">Adams conjecture</a></em>.)</p>
 
 <p>By Prop. <a class="maruku-ref" href="#AdamsOperationsRepresentGaloisAction"></a> this is equivalently the <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>V</mi><mo>+</mo><msup><mi>Ψ</mi> <mrow><msub><mi>n</mi> <mn>1</mn></msub></mrow></msup><mrow><mo>(</mo><mi>V</mi><mo>)</mo></mrow><mo>+</mo><msup><mi>ψ</mi> <mrow><msub><mi>n</mi> <mn>2</mn></msub></mrow></msup><mrow><mo>(</mo><mi>V</mi><mo>)</mo></mrow><mo>+</mo><mi>⋯</mi></mrow><annotation encoding="application/x-tex">
@@ -706,14 +706,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 11:46:49.
+  Last revised on October  1, 2018 at 10:49:39.
   See the <a href="https://ncatlab.org/nlab/history/Schur index" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Schur+index" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur+index/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Schur+index" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur+index" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Schur+index" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Schur+index/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Schur+index" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Schur+index" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Schur index/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
