--- a/pages/19739.html
+++ b/pages/19739.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Martindale ring of quotients in nLab
+      prime ring in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Martindale ring of quotients
+      prime ring
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9078/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9079/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -472,13 +472,21 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/prime+ring">prime ring</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ring">ring</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Martindale+ring+of+quotients">Martindale ring of quotients</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
 
+<p>See also</p>
+
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/eom">eom</a>, <em><a href="https://www.encyclopediaofmath.org/index.php/Martindale_ring_of_quotients">Martindale ring of quotients</a></em></li>
+<li><a class="existingWikiWord" href="/nlab/show/eom">eom</a>, <em><a href="https://www.encyclopediaofmath.org/index.php/Prime_ring">Prime ring</a></em></li>
 </ul>
 </body></html>
 
@@ -486,22 +494,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 10:56:23.
-  See the <a href="https://ncatlab.org/nlab/history/Martindale ring of quotients" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October  1, 2018 at 10:57:45.
+  See the <a href="https://ncatlab.org/nlab/history/prime ring" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Martindale+ring+of+quotients" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Martindale+ring+of+quotients/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Martindale+ring+of+quotients" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Martindale+ring+of+quotients" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Martindale ring of quotients/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/prime+ring" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/prime ring/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Martindale+ring+of+quotients" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/prime+ring" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Martindale+ring+of+quotients" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/prime+ring" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Martindale+ring+of+quotients" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/prime+ring" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
