--- a/pages/10356.html
+++ b/pages/10356.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9027/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -935,6 +935,8 @@ margin-left: 0em;
 
 <p>The corresponding <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> are called <em>fractional</em> D-branes in the literature.</p>
 
+<p>In particular, at least for D-branes at an <a class="existingWikiWord" href="/nlab/show/cyclic+group">A-type</a> singularity <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>⫽</mo><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{C}^2\sslash (\mathbb{Z}/n)</annotation></semantics></math>, hence for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>=</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mi>n</mi></mrow><annotation encoding="application/x-tex">G = \mathbb{Z}/n</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a>, the <a class="existingWikiWord" href="/nlab/show/tension">tension</a> (hence <a class="existingWikiWord" href="/nlab/show/mass">mass</a>) of a fractional D-brane is supposed to be the <a class="existingWikiWord" href="/nlab/show/fraction">fraction</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle displaystyle="false"><mfrac><mn>1</mn><mrow><mo stretchy="false">|</mo><mi>G</mi><mo stretchy="false">|</mo></mrow></mfrac></mstyle><mo>=</mo><mstyle displaystyle="false"><mfrac><mn>1</mn><mi>n</mi></mfrac></mstyle></mrow><annotation encoding="application/x-tex">\tfrac{1}{{\vert G\vert}}  = \tfrac{1}{n}</annotation></semantics></math> of that of the unit <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> brane away from the singularity (<a href="#DouglasGreeneMorrison97">Douglas-Greene-Morrison 97, p.10</a>).</p>
+
 <h3 id="AtGlobalLinearOrbifoldSingularities">At global linear orbifold singularities</h3>
 
 <p>If here <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/contractible+space">contractible space</a> (at it is in the majority of examples discussed in the literature!), then its <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> is equivalently that of the point</p>
@@ -1085,7 +1087,7 @@ margin-left: 0em;
 <p>Early discussion in physics language include</p>
 
 <ul>
-<li>
+<li id="DouglasGreeneMorrison97">
 <p><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <a class="existingWikiWord" href="/nlab/show/Brian+Greene">Brian Greene</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <em>Orbifold Resolution by D-Branes</em>, Nucl.Phys.B506:84-106,1997 (<a href="https://arxiv.org/abs/hep-th/9704151">arXiv:hep-th/9704151</a>)</p>
 </li>
 
@@ -1179,14 +1181,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 13:54:56.
+  Last revised on October  1, 2018 at 11:20:01.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
