--- a/pages/6237.html
+++ b/pages/6237.html
@@ -558,20 +558,26 @@ margin-left: 0em;
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Michael+Hopkins">Michael Hopkins</a>, <a class="existingWikiWord" href="/nlab/show/Nicholas+Kuhn">Nicholas Kuhn</a>, <a class="existingWikiWord" href="/nlab/show/Douglas+Ravenel">Douglas Ravenel</a>, <em>Generalized group characters and complex oriented cohomology theories</em>, J. Amer. Math. Soc. 13 (2000), 553-594 (<a href="http://www.ams.org/journals/jams/2000-13-03/S0894-0347-00-00332-5/">publisher</a>, <a href="http://www.math.rochester.edu/people/faculty/doug/mypapers/hkr.pdf">pdf</a>)</li>
 </ul>
+
+<p>Examples of characters of <a class="existingWikiWord" href="/nlab/show/finite+groups">finite groups</a> are discussed and listed at</p>
+
+<ul>
+<li id="Montaldi08"><span class="newWikiWord">James Montaldi<a href="/nlab/new/James+Montaldi">?</a></span>, <em><a href="www.maths.manchester.ac.uk/~jm/wiki/Representations/Representations">representations</a></em>, 2008</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 24, 2018 at 12:12:59.
+  Last revised on October  1, 2018 at 11:57:28.
   See the <a href="https://ncatlab.org/nlab/history/character" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
