--- a/pages/6489.html
+++ b/pages/6489.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -692,7 +692,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>Bridgeland stability conditions on a <a class="existingWikiWord" href="/nlab/show/triangulated+category">triangulated category</a> are certain data which give a derived analogue of the Mumford’s stability.</p>
+<p>Bridgeland stability conditions on a <a class="existingWikiWord" href="/nlab/show/triangulated+category">triangulated category</a> are certain data which give a derived analogue of <a class="existingWikiWord" href="/nlab/show/David+Mumford">David Mumford</a>‘s concept of <a class="existingWikiWord" href="/nlab/show/GIT-stable+point">stability</a> in <a class="existingWikiWord" href="/nlab/show/geometric+invariant+theory">geometric invariant theory</a>.</p>
 
 <p>The concept originally arose as a formalization of reaction processes of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> for the <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a> <a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>. These are (hypothetical) physical objects that appear in different species labeled by <a class="existingWikiWord" href="/nlab/show/objects">objects</a> in a <a class="existingWikiWord" href="/nlab/show/triangulated+category">triangulated</a> <a class="existingWikiWord" href="/nlab/show/derived+category">derived category</a> (of <a class="existingWikiWord" href="/nlab/show/quasicoherent+sheaves">quasicoherent sheaves</a> on some <a class="existingWikiWord" href="/nlab/show/Calabi-Yau+variety">Calabi-Yau variety</a>). Whenever there is a process</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>↔</mo><mi>B</mi><mo>⊕</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">
@@ -1110,14 +1110,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 10:04:46.
+  Last revised on October  1, 2018 at 11:39:58.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
