--- a/pages/10356.html
+++ b/pages/10356.html
@@ -1150,6 +1150,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>M. Frau, A. Liccardo, R. Musto, <em>The Geometry of Fractional Branes</em>, Nucl.Phys. B602 (2001) 39-60 (<a href="https://arxiv.org/abs/hep-th/0012035">arXiv:hep-th/0012035</a>)</p>
+</li>
+
+<li>
 <p>M. Billo’, B. Craps, F. Roose, <em>Orbifold boundary states from Cardy’s condition</em>, JHEP 0101:038, 2001 (<a href="https://arxiv.org/abs/hep-th/0011060">arXiv:hep-th/0011060</a>)</p>
 </li>
 
@@ -1181,14 +1185,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 11:20:01.
+  Last revised on October  1, 2018 at 12:16:23.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
