--- a/pages/6489.html
+++ b/pages/6489.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_12" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4947/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -786,10 +786,12 @@ margin-left: 0em;
 
 <p>(<a href="#Bridgeland02">Bridgeland 02, Def. 2.2</a>)</p>
 
-<div class="num_defn">
+<div class="num_defn" id="HarderNarasimhanProperty">
 <h6 id="definition_4">Definition</h6>
 
-<p>A stability function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mo>:</mo><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">Z:K(\mathcal{A})\to \mathbb{C}</annotation></semantics></math> <a class="maruku-eqref" href="#eq:StabilityFunction">(1)</a> is said to have the <strong>Harder-Narasimhan property</strong> if for any non-<a class="existingWikiWord" href="/nlab/show/zero+object">zero object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> there exists a finite <a class="existingWikiWord" href="/nlab/show/filtered+object">filtration</a> by <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a></p>
+<p><strong>(Harder-Narasimhan property)</strong></p>
+
+<p>A stability function <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Z</mi><mo>:</mo><mi>K</mi><mo stretchy="false">(</mo><mi>𝒜</mi><mo stretchy="false">)</mo><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">Z:K(\mathcal{A})\to \mathbb{C}</annotation></semantics></math> <a class="maruku-eqref" href="#eq:StabilityFunction">(1)</a> is said to have the <em>Harder-Narasimhan property</em> if for any non-<a class="existingWikiWord" href="/nlab/show/zero+object">zero object</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> there exists a finite <a class="existingWikiWord" href="/nlab/show/filtered+object">filtration</a> by <a class="existingWikiWord" href="/nlab/show/subobjects">subobjects</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>0</mn><mo>=</mo><msub><mi>E</mi> <mn>0</mn></msub><mo>⊂</mo><msub><mi>E</mi> <mn>1</mn></msub><mo>⊂</mo><mi>⋯</mi><mo>⊂</mo><msub><mi>E</mi> <mi>n</mi></msub><mo>=</mo><mi>E</mi></mrow><annotation encoding="application/x-tex">
   0=E_0 \subset E_1 \subset \cdots \subset E_n =E
 
@@ -805,6 +807,8 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div></div>
+
+<p>(<a href="#Bridgeland02">Bridgeland 02, Def. 2.3</a>)</p>
 
 <div class="num_defn" id="Slicing">
 <h6 id="definition_5">Definition</h6>
@@ -1116,14 +1120,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 12:34:05.
+  Last revised on October  1, 2018 at 13:57:14.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
