--- a/pages/6237.html
+++ b/pages/6237.html
@@ -562,7 +562,7 @@ margin-left: 0em;
 <p>Examples of characters of <a class="existingWikiWord" href="/nlab/show/finite+groups">finite groups</a> are discussed and listed at</p>
 
 <ul>
-<li id="Montaldi08">James Montaldi, <em><a href="www.maths.manchester.ac.uk/~jm/wiki/Representations/Representations">representations</a></em>, 2008</li>
+<li id="Montaldi08">James Montaldi, <em><a href="http://www.maths.manchester.ac.uk/~jm/wiki/Representations/Representations">representations</a></em>, 2008</li>
 </ul>
 </body></html>
 
@@ -570,14 +570,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 12:00:48.
+  Last revised on October  2, 2018 at 01:05:36.
   See the <a href="https://ncatlab.org/nlab/history/character" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/character" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/character/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/character" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/character" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/character/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
