--- a/pages/10356.html
+++ b/pages/10356.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1084,7 +1084,7 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>Early discussion in physics language include</p>
+<p>The concept originates with</p>
 
 <ul>
 <li id="DouglasGreeneMorrison97">
@@ -1093,6 +1093,18 @@ margin-left: 0em;
 
 <li>
 <p>Diaconescu, <a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <a class="existingWikiWord" href="/nlab/show/Jaume+Gomis">Jaume Gomis</a>, <em>Fractional Branes and Wrapped Branes</em>, JHEP 9802:013,1998 (<a href="http://arxiv.org/abs/hep-th/9712230">arXiv:hep-th/9712230</a>)</p>
+</li>
+</ul>
+
+<p>based on the analysis of <a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative string theory</a> on (global) <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/background+field">backgrounds</a> in</p>
+
+<ul>
+<li id="DixonHarveyVafaWitten85">
+<p><a class="existingWikiWord" href="/nlab/show/Lance+Dixon">Lance Dixon</a>, <a class="existingWikiWord" href="/nlab/show/Jeff+Harvey">Jeff Harvey</a>, <a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Strings on orbifolds</em>, Nuclear Physics B Volume 261, 1985, Pages 678-686 (<a href="https://doi.org/10.1016/0550-3213(85)90593-0">doi:10.1016/0550-3213(85)90593-0</a>)</p>
+</li>
+
+<li id="DixonHarveyVafaWitten86">
+<p><a class="existingWikiWord" href="/nlab/show/Lance+Dixon">Lance Dixon</a>, <a class="existingWikiWord" href="/nlab/show/Jeff+Harvey">Jeff Harvey</a>, <a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Strings on orbifolds (II)</em>, Nuclear Physics B Volume 274, Issue 2, 15 September 1986, Pages 285-314 (<a href="https://doi.org/10.1016/0550-3213(86)90287-7">doi:10.1016/0550-3213(86)90287-7</a>)</p>
 </li>
 </ul>
 
@@ -1185,14 +1197,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 12:16:23.
+  Last revised on October  2, 2018 at 04:06:35.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
